# package_django_1098t

./: .gitignore  CLAUDE.md  LICENSE  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py
.claude/: settings.local.json
django_1098t/: __init__.py  admin.py  apps.py  constants.py  forms.py  models.py  serializers.py  urls.py
django_1098t/management/commands/: inspect_1098t_template.py  publish_1098t.py  test_1098t_generation.py
django_1098t/migrations/: 0001_initial.py
django_1098t/reports/: f1098_data_export.py  filled_form1098.py
django_1098t/services/: __init__.py  generator.py  publisher.py  storage.py
django_1098t/settings/: f1098.py
django_1098t/templates/django_1098t/: admin_publish.html  admin_statistics.html  form_1098t_list.html  student_forms_list.html  students_forms_list.html
django_1098t/views/: __init__.py  admin_views  admin_views.py  api_views.py  student_views.py
