# setup.cfg

[metadata]
name = django-1098t
version = 1.0.0
description = Django app for generating and managing IRS Form 1098-T tax documents
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/django-1098t
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires =
    Django>=3.2
    pypdf>=4.0.0

[options.packages.find]
exclude =
    tests*